style: Add scrollbar gutter to avoid layout shifts

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body,
 #root {
   min-height: 100%;
   min-height: 100dvh;
+  scrollbar-gutter: stable;
 }
 
 #root {
